<resources>
    <string name="app_name">Stock</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="stock">재고관리</string>
    <string name="search">조회</string>
    <string name="check">현재고가 기준 이하인 재료만 보기</string>
    <string name="edit">수정</string>
    <string name="title_activity_stock_edit">stock_edit</string>
    <string name="title_activity_order_main">order_main</string>
    <string name="orderno">주문번호</string>
    <string name="order">주문내역</string>
    <string name="yet">접수요망 주문수 :</string>
    <string name="orcancel">취소된 주문 수 :</string>
    <string name="refuseor">거부된 주문 수 :</string>
    <string name="allor">총 주문 수 :</string>
    <string name="gohome">홈으로</string>
    <string name="title_activity_menu_detail">menu_detail</string>
    <string name="title_activity_orderhistory">orderhistory</string>
    <string name="title_activity_acceptrefuse">acceptrefuse</string>
</resources>
